feat(LottoManager): 로또 프로그램 실행을 위한 메서드 playLottoProgram을 구현